--- a/.github/workflows/html.yml
+++ b/.github/workflows/html.yml
@@ -29,6 +29,6 @@ jobs:
       - name: plutosliderserver
         run: julia --project --color=yes -e 'import Pkg; Pkg.add("PlutoSliderServer")'
       - name: html
-        run: julia --color=yes -e 'import PlutoSliderServer; PlutoSliderServer.export_notebook("process_scent_data.jl")
+        run: julia --color=yes -e 'import PlutoSliderServer; PlutoSliderServer.export_notebook("process_scent_data.jl")'
       - name: pr
         uses: peter-evans/create-pull-request@v6
